--- a/KuranX.App/Core/ResourceXaml/homeDesign.xaml
+++ b/KuranX.App/Core/ResourceXaml/homeDesign.xaml
@@ -380,12 +380,10 @@
     <!-- HomeScreen Default  -->
 
     <Style x:Key="hmwnd_lifeCyclerPopupHeader" TargetType="TextBlock">
-
         <Setter Property="VerticalAlignment" Value="Center" />
         <Setter Property="HorizontalAlignment" Value="Left" />
-        <Setter Property="Margin" Value="10 0 0 0" />
-        <Setter Property="Width" Value="230" />
         <Setter Property="MaxHeight" Value="42" />
+        <Setter Property="MaxWidth" Value="228" />
         <Setter Property="FontFamily" Value="{DynamicResource PoppinsMedium}" />
         <Setter Property="Foreground" Value="#1C1E2F" />
         <Setter Property="FontSize" Value="14" />
@@ -394,18 +392,16 @@
     </Style>
 
     <Style x:Key="hmwnd_lifeActionPopup" TargetType="Button">
-
-        <Setter Property="Width" Value="24" />
-
-        <Setter Property="Height" Value="24" />
+        <Setter Property="Width" Value="18" />
+        <Setter Property="Height" Value="18" />
+        <Setter Property="Margin" Value="8 0 8 0" />
         <Setter Property="Background" Value="{x:Null}" />
         <Setter Property="BorderThickness" Value="0" />
-
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate>
-                    <TextBlock Width="24" Height="24">
-                        <Icon:PackIconBootstrapIcons x:Name="txt_trg" Kind="ArrowRight" Width="24" Height="24" Foreground="#1C1E2F" />
+                    <TextBlock Width="18" Height="18">
+                        <Icon:PackIconBootstrapIcons x:Name="txt_trg" Kind="ArrowRight" Width="18" Height="18" Foreground="#1C1E2F" />
                     </TextBlock>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="True">
@@ -419,18 +415,39 @@
     </Style>
 
     <Style x:Key="hmwnd_lifeDoubleActionPopup" TargetType="Button">
-
-        <Setter Property="Width" Value="24" />
-
-        <Setter Property="Height" Value="24" />
+        <Setter Property="Width" Value="18" />
+        <Setter Property="Height" Value="18" />
         <Setter Property="Background" Value="{x:Null}" />
         <Setter Property="BorderThickness" Value="0" />
-
+        <Setter Property="Margin" Value="8 0 8 0" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate>
-                    <TextBlock Width="24" Height="24">
-                        <Icon:PackIconBootstrapIcons x:Name="txt_trg" Kind="BoxArrowInUpRight" Width="24" Height="24" Foreground="#1C1E2F" />
+                    <TextBlock Width="18" Height="18">
+                        <Icon:PackIconBootstrapIcons x:Name="txt_trg" Kind="BoxArrowInUpRight" Width="18" Height="18" Foreground="#1C1E2F" />
+                    </TextBlock>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter TargetName="txt_trg" Property="Foreground" Value="#F0433A" />
+                            <Setter Property="Cursor" Value="Hand" />
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style x:Key="hmwnd_lifeExitPopup" TargetType="Button">
+        <Setter Property="Width" Value="16" />
+        <Setter Property="Height" Value="16" />
+        <Setter Property="Background" Value="{x:Null}" />
+        <Setter Property="BorderThickness" Value="0" />
+        <Setter Property="Margin" Value="8 0 8 0" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate>
+                    <TextBlock Width="16" Height="16">
+                        <Icon:PackIconVaadinIcons x:Name="txt_trg" Kind="CloseBig" Width="16" Height="16" Foreground="#1C1E2F" />
                     </TextBlock>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="True">
